# CS-5001-AI-Augmented-SE

CS-5001-AI-Augmented-SE/: LICENSE  README.md
CS-5001-AI-Augmented-SE/Week_3/demo/cli_agent/: README.md  pyproject.toml
CS-5001-AI-Augmented-SE/Week_3/demo/cli_agent/src/classroom_cli_agent/: agent.py  cli.py  llm.py  prompts.py  tools.py  types.py  utils.py
CS-5001-AI-Augmented-SE/Week_3/demo/simplified_agent/: README.md  pyproject.toml
CS-5001-AI-Augmented-SE/Week_3/demo/simplified_agent/output/demo_calculator/src/: calculator.py
CS-5001-AI-Augmented-SE/Week_3/demo/simplified_agent/output/demo_streamlit_calculator/src/: calculator.py
CS-5001-AI-Augmented-SE/Week_3/demo/simplified_agent/output/demo_streamlit_prime_checker/src/: prime.py
CS-5001-AI-Augmented-SE/Week_3/demo/simplified_agent/src/classroom_cli_agent/: agent.py  cli.py  prompts.py  tools.py  types.py  utils.py
CS-5001-AI-Augmented-SE/Week_3/in-class-activity/code_generation_agent/: pyproject.toml
CS-5001-AI-Augmented-SE/Week_3/in-class-activity/code_generation_agent/src/code_generation_cli_agent/: agent.py  cli.py  interactive.py  prompt_manager.py  types.py
CS-5001-AI-Augmented-SE/Week_3/in-class-activity/code_generation_agent/src/code_generation_cli_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CS-5001-AI-Augmented-SE/Week_3/in-class-activity/code_generation_agent/src/code_generation_cli_agent/prompts/: code_generation.yaml  planning.yaml  test_prompts.py
CS-5001-AI-Augmented-SE/Week_3/in-class-activity/code_generation_agent/src/code_generation_cli_agent/prompts/Calc/: README.md  index.html  script.js  style.css
CS-5001-AI-Augmented-SE/Week_3/in-class-activity/code_generation_agent/src/code_generation_cli_agent/prompts/Quiz/: README.md  package-lock.json  package.json
(+298 files in other folders)
