[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-cli-agent"
version = "0.3.0"
description = "Classroom demo: Ollama-based CLI agent that generates code, generates tests, tests coverage, and commits/pushes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytest>=8.0.0", "coverage>=7.0.0", "requests>=2.31.0"]

[project.scripts]
cca = "classroom_cli_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
